Build Java v3 assessment baseline (#2)
* Build Java v2 assessment baseline

* Build Java v3 assessment baseline